--- a/android-dot-com/index.html
+++ b/android-dot-com/index.html
@@ -6,7 +6,9 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
+
       https://www.apache.org/licenses/LICENSE-2.0
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,15 +18,6 @@
 
 <html lang="en">
   <head>
-      <!-- Google Tag Manager -->
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-KDCTKBC');</script>
-      <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
@@ -36,7 +29,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="material.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <style>
     #view-source {
       position: fixed;
@@ -50,10 +42,6 @@
     </style>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDCTKBC"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-      <!-- End Google Tag Manager (noscript) -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
@@ -177,7 +165,7 @@
               <a class="android-image-link" href="">
                 <img class="android-screen-image" src="images/auto-on.jpg">
               </a>
-              <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase mdl-typography--text-left" href="https://www.google.com.br">Coming Soon: Android Auto</a>
+              <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase mdl-typography--text-left" href="">Coming Soon: Android Auto</a>
             </div>
           </div>
         </div>
@@ -190,7 +178,7 @@
                 Calendar and YouTube.
               </p>
               <p>
-                <a class="gtm-link-event" data-gtm-category=news_playstore data-gtm-event=clique:news data-gtm-label=see_news_playstore href="" onclick="dataLayer.push({'event':'event', 'id': 'Play123', 'name': 'PlayStore', 'dimension1': 'Android'})";>
+                <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="">
                   See what's new in the Play Store&nbsp;<i class="material-icons">chevron_right</i>
                 </a>
               </p>
@@ -203,7 +191,6 @@
             <p class="mdl-typography--font-light">
               Put the stuff that you care about right on your home screen: the latest news, the weather or a stream of your recent photos.
               <br>
-              <a href = "https://www.google.com.br">Teste do GTM</a>
               <a href="" class="android-link mdl-typography--font-light">Customise your phone</a>
             </p>
           </div>
@@ -337,7 +324,8 @@
       </div>
     </div>
     <a href="https://github.com/google/material-design-lite/blob/master/templates/android-dot-com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
-    <script src="../../material.min.js"></script>   
-    
+    <script src="../../material.min.js"></script>
+
+
   </body>
 </html>
